added responsive design

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <article class="main-article" id="user-input">
                 <textarea id="user-input-textarea" placeholder="Your text here" rows="20" cols="52"></textarea>
             </article>
-            <article  class="main-article" id="user-actions">
+            <article  class="main-article">
                 <h4>Actions</h4>
                     <div id="rules-type-span">
                         <div class="rules-span-container">
@@ -65,9 +65,12 @@
         </section>
     </main>
     <footer>
-        <center>
-            <p>copyright reserved &copy; for <a href="http://codeman.gq" target="_blank">Abdulrahman Azmy</a> 2018 - 2023</p>
-        </center>
+        <article>
+
+            <center>
+                <p>copyright reserved &copy; for <a href="http://codeman.gq" target="_blank">Abdulrahman Azmy</a> 2018 - 2023</p>
+            </center>
+        </article>
     </footer>
 
     <script src="main.js"></script>
