update main website link

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <article>
 
             <center>
-                <p>copyright reserved &copy; for <a href="http://codeman.gq" target="_blank">Abdulrahman Azmy</a> 2018 - 2023</p>
+                <p>copyright reserved &copy; for <a href="http://abuazmy.online" target="_blank">Abdulrahman Azmy</a> 2018 - 2023</p>
             </center>
         </article>
     </footer>
